@@ -10,7 +10,6 @@ package org.elasticsearch.xpack.logsdb;
 import org.elasticsearch.cluster.node.DiscoveryNode;
 import org.elasticsearch.common.settings.Setting;
 import org.elasticsearch.common.settings.Settings;
-import org.elasticsearch.index.IndexMode;
 import org.elasticsearch.index.IndexSettingProvider;
 import org.elasticsearch.index.IndexVersion;
 import org.elasticsearch.index.mapper.Mapper;
@@ -26,7 +25,6 @@ import org.elasticsearch.xpack.logsdb.patterntext.PatternTextFieldMapper;
 import org.elasticsearch.xpack.logsdb.patterntext.PatternTextFieldType;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
 import java.util.Map;
@@ -111,19 +109,14 @@ public class LogsDBPlugin extends Plugin implements ActionPlugin, MapperPlugin {
 
     @Override
     public List<Setting<?>> getSettings() {
-        List<Setting<?>> settings = new ArrayList<>(
-            Arrays.asList(
-                FALLBACK_SETTING,
-                CLUSTER_LOGSDB_ENABLED,
-                LOGSDB_PRIOR_LOGS_USAGE,
-                PatternTextFieldMapper.DISABLE_TEMPLATING_SETTING,
-                LOGSDB_DEFAULT_SORT_ON_MESSAGE_TEMPLATE
-            )
+        return List.of(
+            FALLBACK_SETTING,
+            CLUSTER_LOGSDB_ENABLED,
+            LOGSDB_PRIOR_LOGS_USAGE,
+            PatternTextFieldMapper.DISABLE_TEMPLATING_SETTING,
+            LOGSDB_DEFAULT_SORT_ON_MESSAGE_TEMPLATE,
+            CLUSTER_LOGSDB_COLUMNAR_ENABLED
         );
-        if (IndexMode.COLUMNAR_FEATURE_FLAG.isEnabled()) {
-            settings.add(CLUSTER_LOGSDB_COLUMNAR_ENABLED);
-        }
-        return settings;
     }
 
     @Override
